complete example code

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,14 @@
     "\n",
     "import cv2\n",
     "import numpy as np\n",
+    "from tabulate import tabulate\n",
     "\n",
     "from pystream import Pipeline, Stage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,103 +96,42 @@
     "    pipeline.add(DummyStage(\"Stage3\"))\n",
     "    pipeline.add(DummyStage(\"Stage4\"))\n",
     "    pipeline.add(DummyStage(\"Stage5\"))\n",
-    "    return pipeline"
+    "    return pipeline\n",
+    "\n",
+    "def print_profile(latency: Dict[str, float], throughput: Dict[str, float]):\n",
+    "    data = []\n",
+    "    for k in latency.keys():\n",
+    "        d = [k, latency[k], throughput[k]]\n",
+    "        data.append(d)\n",
+    "    table = tabulate(data, headers=[\"Stage\", \"Latency (s)\", \"Throughput (d/s)\"])\n",
+    "    print(table)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread PyStream-Automation:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python310\\lib\\threading.py\", line 1016, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"C:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python310\\lib\\threading.py\", line 953, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"d:\\AdibFile\\AdibProgram\\pystream-pipeline\\pystream\\pipeline\\automation.py\", line 45, in _loop_handler\n",
-      "    self.pipeline.forward(data)\n",
-      "  File \"d:\\AdibFile\\AdibProgram\\pystream-pipeline\\pystream\\pipeline\\pipeline.py\", line 126, in forward\n",
-      "    return self.pipeline.forward(pipeline_data)\n",
-      "  File \"d:\\AdibFile\\AdibProgram\\pystream-pipeline\\pystream\\pipeline\\serial_pipeline.py\", line 37, in forward\n",
-      "    data = stage(data)\n",
-      "  File \"d:\\AdibFile\\AdibProgram\\pystream-pipeline\\pystream\\stage\\container.py\", line 47, in __call__\n",
-      "    data.data = self.stage(data.data)\n",
-      "  File \"C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_21020\\1850571075.py\", line 31, in __call__\n",
-      "TypeError: 'PipelineData' object is not subscriptable\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Starting pipeline in serial...\n",
-      "PipelineData(data=PipelineData(data={'data': array([[[ 53, 201,  16],\n",
-      "        [139,  90, 204],\n",
-      "        [231, 244,  34],\n",
-      "        ...,\n",
-      "        [205, 228,  81],\n",
-      "        [167, 211, 173],\n",
-      "        [103, 183,  16]],\n",
-      "\n",
-      "       [[ 51,  79,  13],\n",
-      "        [  0, 130, 188],\n",
-      "        [113, 147,  49],\n",
-      "        ...,\n",
-      "        [222, 253,  32],\n",
-      "        [140, 107, 202],\n",
-      "        [149, 200, 199]],\n",
-      "\n",
-      "       [[168,   7,  31],\n",
-      "        [ 89,  56, 170],\n",
-      "        [  0, 143, 177],\n",
-      "        ...,\n",
-      "        [ 31, 198,  11],\n",
-      "        [241,  35,  31],\n",
-      "        [140,  78, 203]],\n",
-      "\n",
-      "       ...,\n",
-      "\n",
-      "       [[115, 184, 134],\n",
-      "        [152, 249, 246],\n",
-      "        [206,  78,  68],\n",
-      "        ...,\n",
-      "        [177, 244, 130],\n",
-      "        [249,  45,  83],\n",
-      "        [ 38, 118,  50]],\n",
-      "\n",
-      "       [[131,  51, 128],\n",
-      "        [ 84, 207, 208],\n",
-      "        [242, 164, 249],\n",
-      "        ...,\n",
-      "        [  0, 138, 112],\n",
-      "        [159, 150,  43],\n",
-      "        [127, 182, 131]],\n",
-      "\n",
-      "       [[ 76, 251, 150],\n",
-      "        [237,  16,  12],\n",
-      "        [ 33,  84, 186],\n",
-      "        ...,\n",
-      "        [114, 184,  33],\n",
-      "        [ 32, 253,  12],\n",
-      "        [134, 140,  38]]], dtype=uint8)}, profile=ProfileData(started={}, ended={})), profile=ProfileData(started={'Pipeline': 445417.0969281, 'Stage1': 445417.0969363}, ended={}))\n",
+      "Waiting for 5 s...\n",
       "Stopping pipeline...\n",
-      "Last output shape:\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 12\u001b[0m\n\u001b[0;32m     10\u001b[0m latest \u001b[39m=\u001b[39m pipeline\u001b[39m.\u001b[39mget_results()\n\u001b[0;32m     11\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mLast output shape:\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 12\u001b[0m \u001b[39mprint\u001b[39m(latest[\u001b[39m\"\u001b[39;49m\u001b[39mdata\u001b[39;49m\u001b[39m\"\u001b[39;49m])\n\u001b[0;32m     13\u001b[0m pipeline\u001b[39m.\u001b[39mcleanup()\n\u001b[0;32m     15\u001b[0m \u001b[39m# Get the profile\u001b[39;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
+      "\n",
+      "Last output shape:\n",
+      "(480, 720, 3)\n",
+      "\n",
+      "Pipeline profile:\n",
+      "Stage       Latency    Throughput\n",
+      "--------  ---------  ------------\n",
+      "Stage1     0.173414       1.1411\n",
+      "Stage2     0.165654       1.1476\n",
+      "Stage3     0.180477       1.15147\n",
+      "Stage4     0.160584       1.14935\n",
+      "Stage5     0.162539       1.14617\n",
+      "Pipeline   0.842698       1.14617\n"
      ]
     }
    ],
@@ -199,29 +139,128 @@
     "pipeline = create_pipeline()\n",
     "print(\"Starting pipeline in serial...\")\n",
     "pipeline.serialize()\n",
+    "print(f\"Streaming data each {INPUT_PERIOD} s...\")\n",
     "pipeline.start_loop(INPUT_PERIOD)\n",
+    "print(f\"Waiting for {ON_TIME} s...\")\n",
     "time.sleep(ON_TIME)\n",
     "print(\"Stopping pipeline...\")\n",
     "pipeline.stop_loop()\n",
     "\n",
     "# Let's try read the last result and do cleanup\n",
     "latest = pipeline.get_results()\n",
+    "print()\n",
     "print(\"Last output shape:\")\n",
-    "print(latest[\"data\"])\n",
+    "print(latest[\"data\"].shape)\n",
     "pipeline.cleanup()\n",
     "\n",
     "# Get the profile\n",
-    "profile = pipeline.get_profiles()\n",
-    "print(\"Pipeline profiling results:\")\n",
-    "print(profile)"
+    "latency, throughput = pipeline.get_profiles()\n",
+    "print()\n",
+    "print(\"Pipeline profile:\")\n",
+    "print_profile(latency, throughput)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[PyStream] 2023-03-30 20:40:19,247 - INFO      : (Stage1 9496) Thread started...\n",
+      "[PyStream] 2023-03-30 20:40:19,365 - INFO      : (Stage2 15652) Thread started...\n",
+      "[PyStream] 2023-03-30 20:40:19,368 - INFO      : (Stage3 10060) Thread started...\n",
+      "[PyStream] 2023-03-30 20:40:19,368 - INFO      : (Stage4 16652) Thread started...\n",
+      "[PyStream] 2023-03-30 20:40:19,372 - INFO      : (Stage5 18200) Thread started...\n",
+      "[PyStream] 2023-03-30 20:40:19,372 - INFO      : (FinalStage 11460) Thread started...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting pipeline in parallel...\n",
+      "Streaming data each 0.2 s...\n",
+      "Waiting for 5 s...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[PyStream] 2023-03-30 20:40:24,432 - INFO      : (Stage5 18200) Terminating thread...\n",
+      "[PyStream] 2023-03-30 20:40:24,443 - INFO      : (FinalStage 11460) Terminating thread...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stopping pipeline...\n",
+      "\n",
+      "Last output shape:\n",
+      "(480, 720, 3)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[PyStream] 2023-03-30 20:40:24,620 - INFO      : (Stage3 10060) Terminating thread...\n",
+      "[PyStream] 2023-03-30 20:40:24,626 - INFO      : (Stage4 16652) Terminating thread...\n",
+      "[PyStream] 2023-03-30 20:40:24,638 - INFO      : (Stage2 15652) Terminating thread...\n",
+      "[PyStream] 2023-03-30 20:40:24,639 - INFO      : (Stage1 9496) Terminating thread...\n",
+      "[PyStream] 2023-03-30 20:40:25,446 - INFO      : (Stage5 18200) Thread terminated...\n",
+      "[PyStream] 2023-03-30 20:40:25,446 - INFO      : (FinalStage 11460) Thread terminated...\n",
+      "[PyStream] 2023-03-30 20:40:25,632 - INFO      : (Stage4 16652) Thread terminated...\n",
+      "[PyStream] 2023-03-30 20:40:25,632 - INFO      : (Stage3 10060) Thread terminated...\n",
+      "[PyStream] 2023-03-30 20:40:25,648 - INFO      : (Stage1 9496) Thread terminated...\n",
+      "[PyStream] 2023-03-30 20:40:25,648 - INFO      : (Stage2 15652) Thread terminated...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Pipeline profile:\n",
+      "Stage       Latency    Throughput\n",
+      "--------  ---------  ------------\n",
+      "Stage1     0.229076       4.34578\n",
+      "Stage2     0.220657       4.29952\n",
+      "Stage3     0.222065       4.2608\n",
+      "Stage4     0.233113       4.24435\n",
+      "Stage5     0.235186       4.21391\n",
+      "Pipeline   1.32022        4.21369\n"
+     ]
+    }
+   ],
+   "source": [
+    "pipeline = create_pipeline()\n",
+    "print(\"Starting pipeline in parallel...\")\n",
+    "pipeline.parallelize()\n",
+    "print(f\"Streaming data each {INPUT_PERIOD} s...\")\n",
+    "pipeline.start_loop(INPUT_PERIOD)\n",
+    "print(f\"Waiting for {ON_TIME} s...\")\n",
+    "time.sleep(ON_TIME)\n",
+    "print(\"Stopping pipeline...\")\n",
+    "pipeline.stop_loop()\n",
+    "\n",
+    "# Let's try read the last result and do cleanup\n",
+    "latest = pipeline.get_results()\n",
+    "print()\n",
+    "print(\"Last output shape:\")\n",
+    "print(latest[\"data\"].shape)\n",
+    "pipeline.cleanup()\n",
+    "\n",
+    "# Get the profile\n",
+    "latency, throughput = pipeline.get_profiles()\n",
+    "print()\n",
+    "print(\"Pipeline profile:\")\n",
+    "print_profile(latency, throughput)"
+   ]
   }
  ],
  "metadata": {
@@ -240,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4
  },
