--- a/demo.ipynb
+++ b/demo.ipynb
@@ -70,32 +70,17 @@
     "    \"\"\"A dummy stage that performs some convolutions to the input 2D array,\n",
     "    and count how many input it has processed.\n",
     "    \n",
-    "    It is recommended to define 'name' property in the stage instance init\n",
+    "    For stages in class form, the __call__ and cleanup methods have to be \n",
+    "    defined, and it is recommended to define 'name' property in the stage \n",
+    "    instance init\n",
     "    \"\"\"\n",
     "\n",
     "    def __init__(self, name: str) -> None:\n",
-    "        \"\"\"Initialize stage\n",
-    "\n",
-    "        Args:\n",
-    "            name (str): stage name\n",
-    "        \"\"\"        \n",
     "        self.count = 0\n",
     "        self.name = name\n",
     "        self.kernel = np.random.randint(-10, 10, size=(5, 5))\n",
     "\n",
     "    def __call__(self, data: Dict[str, np.ndarray]) -> Dict[str, np.ndarray]:\n",
-    "        \"\"\"Main data processing of the stage, a mandatory method of the Stage \n",
-    "        class. Note that the stage does not return a new dict object, but only\n",
-    "        modifies the input object and returns it as the output\n",
-    "\n",
-    "        Args:\n",
-    "            data (Dict[str, np.ndarray]): the input array, packed\n",
-    "                in a dictionary\n",
-    "\n",
-    "        Returns:\n",
-    "            Dict[str, np.ndarray]: the output array, packed\n",
-    "            in a dictionary\n",
-    "        \"\"\"\n",
     "        img = data[\"data\"]\n",
     "        for _ in range(100):\n",
     "            img = cv2.filter2D(src=img, ddepth=-1, kernel=self.kernel)\n",
@@ -104,9 +89,35 @@
     "        return data\n",
     "\n",
     "    def cleanup(self):\n",
-    "        \"\"\"Cleanup method, called at the end of the pipeline.\n",
-    "        in this example, we want to reset the counter to 0\"\"\"\n",
     "        self.count = 0"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also define the above stage as a function without the counter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dummy_stage_func(data: Dict[str, np.ndarray]) -> Dict[str, np.ndarray]:\n",
+    "    \"\"\"A function that does some convolutions to the input.\n",
+    "    \n",
+    "    This is a dummy stage defined as a function. A stage in function form only \n",
+    "    takes one argument and return one result with same type\"\"\"\n",
+    "\n",
+    "    img = data[\"data\"]\n",
+    "    kernel = np.random.randint(-10, 10, size=(5, 5))\n",
+    "    for _ in range(100):\n",
+    "        img = cv2.filter2D(src=img, ddepth=-1, kernel=kernel)\n",
+    "    data[\"data\"] = img\n",
+    "    return data"
    ]
   },
   {
@@ -157,11 +168,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create the pipeline. You only need to use `pystream.Pipeline` to create it. Here I put the pipeline creation into `create_pipeline` function. I also made a helper function `print_profile` to print profiling results later."
+    "Create the pipeline. You only need to use `pystream.Pipeline` to create it. Here I put the pipeline creation into `create_pipeline` function. I also made a helper function `print_profile` to print profiling results later. In this particular example we use only the class-based stage."
    ]
   },
   {
@@ -306,7 +316,7 @@
    ],
    "source": [
     "pipeline, stages = create_pipeline()\n",
-    "print(\"Starting pipeline in serial...\")\n",
+    "print(\"Starting pipeline in parallel...\")\n",
     "pipeline.parallelize()\n",
     "print(f\"Streaming data each {INPUT_PERIOD} s...\")\n",
     "pipeline.start_loop(INPUT_PERIOD)\n",
@@ -346,11 +356,183 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Manually Triggered Pipeline"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Of course, you can also pass the data to the pipeline manually. Just use the `forward` method. Let's recreate the pipeline. This time, we use both class and function-based stages."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def create_pipeline() -> Pipeline:\n",
+    "    # First, create the pipeline instance, we want to use the profiler\n",
+    "    pipeline = Pipeline(input_generator=generate_data, use_profiler=True)\n",
+    "    # Now, add the stages to the pipeline.\n",
+    "    pipeline.add(DummyStage(\"Stage1\"))\n",
+    "    pipeline.add(DummyStage(\"Stage2\"))\n",
+    "    pipeline.add(dummy_stage_func)\n",
+    "    pipeline.add(dummy_stage_func)\n",
+    "    return pipeline\n",
+    "\n",
+    "def print_profile(latency: Dict[str, float], throughput: Dict[str, float]) -> None:\n",
+    "    data = []\n",
+    "    for k in latency.keys():\n",
+    "        d = [k, latency[k], throughput[k]]\n",
+    "        data.append(d)\n",
+    "    table = tabulate(data, headers=[\"Stage\", \"Latency (s)\", \"Throughput (d/s)\"])\n",
+    "    print(table)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define some parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Times to run the pipeline\n",
+    "ON_CYCLE = 10"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Try to pass the data manually by using the `forward` method. Let's just use parallel pipeline this time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting pipeline in parallel...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Stage_2:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\nriin\\AppData\\Local\\Programs\\Python\\Python310\\lib\\threading.py\", line 1016, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"c:\\Users\\nriin\\projects\\personal\\pystream-pipeline\\pystream\\pipeline\\parallel_pipeline.py\", line 101, in run\n",
+      "    self.run_loop()\n",
+      "  File \"c:\\Users\\nriin\\projects\\personal\\pystream-pipeline\\pystream\\pipeline\\parallel_pipeline.py\", line 123, in run_loop\n",
+      "    self.process_cleanup()\n",
+      "  File \"c:\\Users\\nriin\\projects\\personal\\pystream-pipeline\\pystream\\pipeline\\parallel_pipeline.py\", line 129, in process_cleanup\n",
+      "    self.stage.cleanup()\n",
+      "  File \"c:\\Users\\nriin\\projects\\personal\\pystream-pipeline\\pystream\\stage\\container.py\", line 51, in cleanup\n",
+      "    self.stage.cleanup()\n",
+      "AttributeError: 'function' object has no attribute 'cleanup'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last output shape:\n",
+      "(480, 720, 3)\n",
+      "Number of processed data:\n",
+      "0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Stage_1:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\nriin\\AppData\\Local\\Programs\\Python\\Python310\\lib\\threading.py\", line 1016, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"c:\\Users\\nriin\\projects\\personal\\pystream-pipeline\\pystream\\pipeline\\parallel_pipeline.py\", line 101, in run\n",
+      "    self.run_loop()\n",
+      "  File \"c:\\Users\\nriin\\projects\\personal\\pystream-pipeline\\pystream\\pipeline\\parallel_pipeline.py\", line 123, in run_loop\n",
+      "    self.process_cleanup()\n",
+      "  File \"c:\\Users\\nriin\\projects\\personal\\pystream-pipeline\\pystream\\pipeline\\parallel_pipeline.py\", line 129, in process_cleanup\n",
+      "    self.stage.cleanup()\n",
+      "  File \"c:\\Users\\nriin\\projects\\personal\\pystream-pipeline\\pystream\\stage\\container.py\", line 51, in cleanup\n",
+      "    self.stage.cleanup()\n",
+      "AttributeError: 'function' object has no attribute 'cleanup'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pipeline has been cleaned-up\n",
+      "Data counter was reset to 0.\n",
+      "\n",
+      "Pipeline profile:\n",
+      "Stage       Latency (s)    Throughput (d/s)\n",
+      "--------  -------------  ------------------\n",
+      "Stage1         0.190238             5.29049\n",
+      "Stage2         0.213514             4.70103\n",
+      "Stage_1        0.20015              4.70682\n",
+      "Stage_2        0.194335             4.89007\n",
+      "Pipeline       1.26804              4.89025\n"
+     ]
+    }
+   ],
+   "source": [
+    "pipeline = create_pipeline()\n",
+    "print(\"Starting pipeline in parallel...\")\n",
+    "# Wait for 5 seconds if the pipeline is not ready to take data yet when\n",
+    "# pushing data to the pipeline\n",
+    "pipeline.parallelize(block_input=True, input_timeout=10)\n",
+    "\n",
+    "# Generate and forward the data for ON_CYCLE times\n",
+    "for _ in range(ON_CYCLE):\n",
+    "    data = {\n",
+    "        \"data\": np.random.randint(0, 255, size=(480, 720, 3), dtype=np.uint8)\n",
+    "    }\n",
+    "    pipeline.forward(data)\n",
+    "time.sleep(5)\n",
+    "\n",
+    "# Let's try read the last result and do cleanup\n",
+    "latest = pipeline.get_results()\n",
+    "print()\n",
+    "print(\"Last output shape:\")\n",
+    "print(latest[\"data\"].shape)\n",
+    "print(\"Number of processed data:\")\n",
+    "print(stages[-1].count)\n",
+    "pipeline.cleanup()\n",
+    "print(\"Pipeline has been cleaned-up\")\n",
+    "print(f\"Data counter was reset to {stages[-1].count}.\")\n",
+    "\n",
+    "# Get the profile\n",
+    "latency, throughput = pipeline.get_profiles()\n",
+    "print()\n",
+    "print(\"Pipeline profile:\")\n",
+    "print_profile(latency, throughput)"
+   ]
   }
  ],
  "metadata": {
